Add Github link

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <h1>Kevin Wong</h1>
 <img alt="ANGRY CAT!" src="cat.gif">
 <hr>
+<p>Github: <a href="https://github.com/kwongius">kwongius</a></p>
 </body>
 </html>
