Fix mobile support and add a little CSS

--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
-<html>    
-<head>
-<title>ANGRY CAT</title>
-</head>
-<body bgcolor="#FFFFFF">
-<h1>Kevin Wong</h1>
-<img alt="ANGRY CAT!" src="cat.gif">
-<hr>
-<p>Github: <a href="https://github.com/kwongius">kwongius</a></p>
-</body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Kevin Wong</title>
+    <style type="text/css">
+      body {
+        background: #EEE;
+        margin: 10px;
+        font-family: sans-serif;
+      }
+      </style>
+  </head>
+  <body>
+    <h1>Kevin Wong</h1>
+    <img alt="ANGRY CAT!" src="cat.gif">
+    <hr>
+    <p>Github: <a href="https://github.com/kwongius">kwongius</a></p>
+  </body>
 </html>
